--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,7 @@ div#places_div{
 .table {
     /* height: 80vh; */
     max-height: 80vh;
+    max-width: 43vw;
     /* border: 0; */
     padding: 0;
     background-color: var(--ofm-bg)!important;
