--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ main a:active {
 }
 
 .hline:after {                                                                                                                                                                                                                                             
-width:100%;
+max-width:100%;
 content: "";
 display: inline-block ;
 border-bottom: 1px solid #888 ;
@@ -205,7 +205,7 @@ div#navbarSupportedContent div#navbar_right_spacer {
 
 div#places_div{
         min-height: 40vh;
-
+	margin: auto;
 }
 
 
@@ -243,9 +243,10 @@ div#places_div{
 .table {
     /* height: 80vh; */
     max-height: 80vh;
-    max-width: 43vw;
     /* border: 0; */
     padding: 0;
+    width: auto!important ;
+    box-sizing: border-box;
     background-color: var(--ofm-bg)!important;
 }
 
@@ -315,7 +316,7 @@ div#places_div{
 }
 .flex-grow-1.flex-shrink-1.bg {
     min-height: 5vh;
-    width: 100%;
+    max-width: 100%;
     background: url('../images/cover.jpg') no-repeat;
 }
 
@@ -335,6 +336,7 @@ div#places_div{
 .container {
     padding-left: 1rem ;
     padding-right: 1rem ;
+    max-width: 90vw ;
 }
 
 .tabulator-header {
