--- a/html/css/style.css
+++ b/html/css/style.css
@@ -542,3 +542,50 @@ hr {
 	border-top: var(--bs-border-width) solid;
 	opacity: .25;
 }
+
+@media screen and (max-width: 639px) {                                                                                                                                                                                                                         
+    .row {
+            margin: 0;
+    }
+    .facsimiles {
+            visibility: hidden;
+            padding: 0;
+            max-height: 0;
+    }
+
+    .facsimiles * {
+            visibility: hidden;
+            position: static;
+            padding: 0;
+            max-height: 0;
+    }
+
+    .col-md-2.col-lg-2.col-sm-12{
+            padding: 0;
+            max-width: 2em;
+    }
+    .container {
+            padding: 0.5em;
+            max-width: 80vh;
+    }
+
+    .col-md-4 {
+            padding-left: 1em;
+            padding-right: 1em ;
+    }
+
+    .col-md-8 {
+            padding-top: 0;
+            padding-bottom: 0;
+            padding-left: 1em;
+            padding-right: 1em ;
+            max-width: 100% ;
+    }
+    .col-md-8.col-lg-8.col-sm-12{
+            max-width: 78%;
+            padding: 0;
+    }
+    #Hits {
+            width: 100%;
+    }
+}
