--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,7 @@ div#navbarSupportedContent div#navbar_right_spacer {
 }
 
 .facsimiles {
+	height: 67vh;
     padding-left: 0!important ; 
     padding-right: 0!important ;
     max-width: fit-content;
@@ -250,8 +251,8 @@ div#navbarSupportedContent div#navbar_right_spacer {
 }
 
 #seadragon-viewer{
-    min-height: 60vh;
-    min-width: 40vw;
+    height: 67vh;
+    min-width: 50vw;
 }
 
 
