deploy: 9c74ea498fcabbfb702fb39d2a47f7292f2bddf5

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@
 }
 
 
+.drucker * {
+    list-style-type: none;
+}
 .times-new-roman * {
     font-family: "Times New Roman", serif !important;
   }
@@ -242,7 +245,6 @@ div#navbarSupportedContent div#navbar_right_spacer {
 }
 
 .facsimiles {
-	height: 67vh;
     padding-left: 0!important ; 
     padding-right: 0!important ;
     max-width: fit-content;
@@ -251,14 +253,18 @@ div#navbarSupportedContent div#navbar_right_spacer {
 }
 
 #seadragon-viewer{
-    height: 67vh;
-    min-width: 50vw;
+    min-height: 60vh;
+    min-width: 40vw;
 }
 
 
 #MyTable {
   min-width: unset !important;
   }
+
+#persTable {
+    min-width: unset !important;
+}
 
 #tabulator.table:not(.thead-light) .tabulator-header, .tabulator.table:not(.thead-light) .tabulator-header .tabulator-col {
 	/*border-color: var(--ofm-contrast);
@@ -473,7 +479,10 @@ div#text-resize div.card-body.non_mimetic_lbs {
 }   
 
 #footer-full-content {
-    padding: 0;
+    padding-top: 2em;
+    padding-left: 0;
+    padding-bottom: 0;
+    padding-right: 0;
     font-size:smaller;
 }
 
