--- a/html/css/style.css
+++ b/html/css/style.css
@@ -96,6 +96,7 @@ main {
     background-color: var(--ofm-bg);
 }
 
+
 a{
     color: var(--ofm-link-color);
     text-decoration: none!important ;
@@ -131,19 +132,6 @@ a:active {
 }
 
 
-.col-md-6.col-lg-6.col-sm-12 {
-    resize: horizontal;
-    opacity: 0.95!important ;
-    background-color: var(--ofm-bg-text) ;
-    font-family: "Courier New" ;
-    padding-left: 1rem!important ; 
-    padding-right: 1rem!important ;
-
-}
-
-.col-md-6.col-lg-6.col-sm-12.text * { 
-    font-family: "Courier New" ; 
-}
 
 .card-body {
 	padding: 1em;
@@ -220,13 +208,13 @@ div#navbarSupportedContent div#navbar_right_spacer {
     padding-top: 0rem;
     padding-bottom: 2em;
     margin-left: auto;
-    max-height: 900px;
+    max-height: 100%;
 }
 
 .facsimiles {
     padding-left: 0!important ; 
     padding-right: 0!important ;
-    max-width: fit-content;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -456,13 +444,6 @@ min-width: unset ;
 }
 
 
-div#text-resize div.card-body.mimetic_lbs {
-	max-width: 100rem;
-}
-div#text-resize div.card-body.non_mimetic_lbs {
-	 max-width: 80rem;
-}   
-
 #footer-full-content {
     padding-top: 2em;
     padding-left: 0;
@@ -534,27 +515,34 @@ h2 {
     font-weight: bold ;
 }
 
-    .nothingtoseehere {
-            visibility: hidden!important;
-	    display: none!important;
-            padding: 0!important;
-            max-height: 0;
-	    max-width: 0;
-	    border: 0;
-	    margin: 0;
-	    padding-bottom: 0!important;
-    }
+#container-resize,
+#text-resize {
+    position: sticky;
+    max-width: 100vw ;
+    max-height: 100vh ;
+    padding: 0;
+	margin: 0;
+}
 
-    .nothingtoseehere * {
-	    visibility: hidden!important;
-	    display: none!important;
-	    padding: 0!important;
-	    max-height: 0!important;
-	    max-width: 0!important;
-	    border: 0!important;
-	    margin: 0!important;
-	    padding-bottom: 0!important;
-    }
+
+#text-resize {
+    max-height: 100vh ;
+    overflow-y: scroll ;
+}
+
+#text-resize, #text-resize * {
+    padding-left: 0 ;
+    padding-right: 0 ;
+	padding-bottom: 0 ;
+	max-width: 1vw ;
+    color: #fff;
+    overflow-x: clip ;
+}
+
+
+
+
+
 
 
 @media screen and (max-width: 1015px) {
