--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ div#navbarSupportedContent div#navbar_right_spacer {
     padding-top: 0rem;
     padding-bottom: 2em;
     margin-left: auto;
-    width: auto ;
+    width: auto!important;
     max-height: 100%;
 }
 
@@ -527,9 +527,10 @@ width: 100% ;
 #text-resize {
     position: sticky;
     max-width: 100vw ;
-    max-height: 100vh ;
+    max-height: auto ;
     padding: 0;
 	margin: 0;
+    padding-bottom: 1vw!important;
 }
 
 .right {
@@ -547,7 +548,6 @@ width: 100% ;
 #text-resize, #text-resize * {
     padding-left: 0 ;
     padding-right: 0 ;
-	padding-bottom: 0 ;
 	max-width: 1vw ;
     color: #fff;
     overflow-x: clip ;
