--- a/html/css/style.css
+++ b/html/css/style.css
@@ -97,7 +97,6 @@ main {
 }
 
 
-
 a{
     color: var(--ofm-link-color);
     text-decoration: none!important ;
@@ -106,11 +105,6 @@ a{
 a:hover,
 a:active {
     color: var(--ofm-font-color) ;
-}
-
-ul {
-	list-style: none;
-	text-align: left;
 }
 
 .col-md-4 {
@@ -214,7 +208,6 @@ div#navbarSupportedContent div#navbar_right_spacer {
     padding-top: 0rem;
     padding-bottom: 2em;
     margin-left: auto;
-    width: auto!important;
     max-height: 100%;
 }
 
@@ -278,10 +271,6 @@ div#navbarSupportedContent div#navbar_right_spacer {
 	background-color: var(--ofm-bg);
 }
 
-
-.table.entity-table {
-text-align: left ;
-}
 
 .table a {
     color: var(--ofm-bg-dark)!important;
@@ -526,48 +515,30 @@ h2 {
     font-weight: bold ;
 }
 
-.fa_links {
-width: 100% ;
-}
 
-.col-xs-4{
-    width: 33.33% ;cd 
-}
 #container-resize,
 #text-resize {
-    position: sticky;
-    max-width: 100vw ;
-    max-height: auto ;
-    padding: 0;
+    padding: 1;
 	margin: 0;
-    padding-bottom: 50vw!important;
 }
 
-.right {
-    text-align: left ;
+#transcript{
+
 }
-.left{
-    text-align: right ;
+#text-resize {
+    max-height: 1em;
+    max-width: 3em ;
+    overflow-y: hidden ; 
 }
 
 
-
-#text-resize, #text-resize * {
+#text-resize * {
     padding-left: 0 ;
     padding-right: 0 ;
-	max-width: 30vw ;
-    color: #000;
-    overflow-x: clip ;
+	padding-bottom: 0 ;
+    overflow-x: hidden ;
+    color: #fff;
 }
-
-
-.pb {
-    display: inline-block;
-    height: 50vh ;
-}
-
-
-
 
 @media screen and (max-width: 1015px) {
 	.flex-grow-1.flex-shrink-1.bg {
@@ -615,12 +586,11 @@ width: 100% ;
             padding: 0.5em;
             max-width: 80vh;
     }
-    .osd-container {                                                                                                                                                                                                                                           
-        height: 80vh!important;
-        }   
+
     .col-md-4 {
             padding-left: 1em;
             padding-right: 1em ;
+            max-width: 33%;
     }
 
     .col-md-8 {
