--- a/css/style.css
+++ b/css/style.css
@@ -666,8 +666,8 @@ h2 {
     .col-md-8 {
             padding-top: 0;
             padding-bottom: 0;
-            padding-left: 1em;
-            padding-right: 1em ;
+            padding-left: 0;
+            padding-right: 0 ;
             max-width: 100% ;
     }
     .col-md-8.col-lg-8.col-sm-12{
